test/expected/explain_lf-c.out
explain long float x
             ^
14: error: "long float" is illegal for built-in type unless K&RC
